// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`competing style priority 1`] = `
";

() => create(Foo, {}, create(Bar, {
  \\"className\\": \\"Bar_24g\\"
}));

CSS.put(\`
	.Bar_24g { color: red }
\`);"
`;

exports[`competing style priority 2`] = `
";

() => <Foo><Bar className=\\"Bar_24g\\" /></Foo>;

CSS.put(\`
	.Bar_24g { color: red }
\`);"
`;

exports[`conditional priority should be higher 1`] = `
"() => create(\\"div\\", {
  \\"className\\": use(\\"element_26b\\", !!checked && \\"if_checked_6ac\\")
}, create(\\"div\\", {
  \\"className\\": \\"test_2ng test_1k6\\"
}));

CSS.put(\`
	.test_1k6 { color: green }
	.element_26b.if_checked_6ac .test_2ng { color: red }
\`);"
`;

exports[`conditional priority should be higher 2`] = `
"() => <div className={use(\\"element_26b\\", !!checked && \\"if_checked_6ac\\")}><div className=\\"test_2ng test_1k6\\" /></div>;

CSS.put(\`
	.test_1k6 { color: green }
	.element_26b.if_checked_6ac .test_2ng { color: red }
\`);"
`;

exports[`prioritize external (capital-letter) define 1`] = `
"const Foo = ({
  className
}) => create(\\"div\\", {
  \\"className\\": use(\\"Foo_8ef\\", className)
}, \\"Hello\\");

const Bar = () => create(Foo, {
  \\"className\\": \\"Foo_2b9\\"
});

CSS.put(\`
	.Foo_8ef { color: red }
	.Foo_2b9 { color: blue }
\`);"
`;

exports[`prioritize external (capital-letter) define 2`] = `
"const Foo = ({
  className
}) => <div className={use(\\"Foo_8ef\\", className)}>Hello</div>;

const Bar = () => <Foo className=\\"Foo_2b9\\" />;

CSS.put(\`
	.Foo_8ef { color: red }
	.Foo_2b9 { color: blue }
\`);"
`;
